syntax = "proto3";

message test_msg {
  string test_string = 1;
  int32 test_int = 2;
  int32 test_int_2 = 3;
  repeated int32 data = 4 [packed=true];
}
